<?xml version="1.0"?>
<package format="2">
  <name>mbes_sim</name>
  <version>0.0.0</version>
  <description>The mbes_sim package</description>

  <maintainer email="roland@ccom.unh.edu">roland</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>python-gdal</depend>

  <export>
  </export>
</package>
